style.css
/* ... */
/* Media Queries */
@media screen and (max-width: 1440px) {
  #links {
    font-size: 11vw;
  }
}

@media screen and (max-width: 1200px) {
  #links {
    display: block;
    text-align: center;
  }
  .link-spacer {
    height: 0.2vw;
    width: 100%;
    background-color: #2c2a2c;
  }
  #projects {
    -ms-grid-rows: 0.5fr 1fr;
        grid-template-rows: 0.5fr 1fr;
  }
  #contact {
    -ms-grid-rows: 0.2fr 1fr;
        grid-template-rows: 0.2fr 1fr;
  }
}

@media screen and (max-width: 850px) {
  html {
    font-size: 80%;
  }
  #links {
    -webkit-transform: translate3d(4.5%, 0, 0) !important;
            transform: translate3d(4.5%, 0, 0) !important;
  }
  .education-element {
    font-size: calc(0.8rem + 0.8vw);
  }
  .projects-wrapper ul li a {
    font-size: calc(2rem + 3vw);
  }
  .headline h1,
  .headline-about h1 {
    font-size: calc(0.8rem + 4vw);
  }
  .headline h2,
  .headline-about h2,
  .headline-secondary h2 {
    font-size: calc(0.5rem + 4vw);
  }
  .contact-text p,
  .contact-text span,
  .contact-text a {
    font-size: calc(1rem + 1vw);
  }
  .cursor {
    display: none;
  }
}

@media screen and (max-width: 480px) {
  .index-wrapper {
    -ms-grid-columns: 1fr 8fr 1fr;
        grid-template-columns: 1fr 8fr 1fr;
  }
  #links {
    padding: 6rem 2rem 0 0;
    font-size: calc(2rem + 5vw);
  }
  #links a {
    color: #2c2a2c;
    -webkit-text-stroke: none;
  }
  .link-spacer {
    height: 0.25vw;
  }
  .text-wrapper {
    -webkit-transform: translateY(10%);
            transform: translateY(10%);
  }
  #index-header h1 {
    font-size: calc(0.8rem + 1.5vw);
  }
  .footer-links a {
    font-size: calc(1.5rem + 1vw);
  }
  .footer-links a::after {
    top: 2.3vw;
    height: 4vw;
  }
  #about {
    -ms-grid-rows: 3fr 2fr 0.8fr;
        grid-template-rows: 3fr 2fr 0.8fr;
  }
  .headline,
  .headline-about {
    padding-top: 5rem;
  }
  .headline h1,
  .headline-about h1 {
    -webkit-text-stroke: 1px #f2efe8;
    font-size: calc(1rem + 5vw);
  }
  .headline h2,
  .headline-about h2,
  .headline-secondary h2 {
    font-size: calc(0.8rem + 5vw);
    -webkit-text-stroke: 1px #f2efe8;
  }
  .headline-secondary h2 {
    font-size: calc(1rem + 5vw);
  }
  .headline-secondary h3 {
    font-size: calc(0.8rem + 5vw);
  }
  .description p {
    font-size: calc(1rem + 0.7vw);
  }
  .education-element {
    font-size: calc(1rem + 0.8vw);
  }
  .contact-text p,
  .contact-text span,
  .contact-text a {
    font-size: calc(1rem + 1vw);
  }
  .projects-wrapper ul li a {
    font-size: calc(1rem + 5vw);
    -webkit-text-stroke: 1px #f2efe8;
  }
}
/*# sourceMappingURL=style.css.map */

